Updated fix