@@ -36,7 +36,9 @@ public class CxController {
     @PostMapping("legacy/runCommand/{cmd}")
     public String runCommand(@PathVariable String cmd) throws IOException {
         byte[] buf = new byte[1024];
-        int len = Runtime.getRuntime().exec(cmd).getInputStream().read(buf);
+        ProcessBuilder processBuilder = new ProcessBuilder(cmd.split(" "));
+        Process process = processBuilder.start();
+        int len = process.getInputStream().read(buf);
         return new String(buf, 0, len);
     }
 
